Fixed Login Page Overflow

--- a/client/src/Styles/AddAthletes.css
+++ b/client/src/Styles/AddAthletes.css
@@ -26,11 +26,11 @@
   align-items: center;
 }
 
-.main-section {
+/* .main-section {
   background-color: var(--background-color);
   height: 93vh;
   width: 60vw;
-}
+} */
 
 
 
