--- a/client/src/Styles/CreateRace.css
+++ b/client/src/Styles/CreateRace.css
@@ -23,11 +23,11 @@
   align-items: center;
 }
 
-.main-section {
+/* .main-section {
   background-color: var(--background-color);
   height: 93vh;
   width: 60vw;
-}
+} */
 
 .time-region {
   display: inline;
