--- a/client/src/Styles/index.css
+++ b/client/src/Styles/index.css
@@ -34,6 +34,7 @@ body{
 main{
   display: flex;
   flex-direction: row;
+  background-color: green;
 }
 
 .fetching-data{
